Closed Bug 1345830 Opened 8 years ago Closed 6 years ago

Modifier keys and reserved keyboard shortcuts should not trigger 'interactivity' flag on documents (should still not show beforeunload dialog)

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox55 --- wontfix
firefox71 --- fixed

People

(Reporter: Gijs, Assigned: Gijs)

References

Details

Attachments

(1 file)

Bug 636905 made it so pages can't stop you from leaving with beforeunload dialogs if you've never interacted with the page. Unfortunately, in some circumstances if focus is inside the web page and you use a keyboard shortcut to try to close the tab/window, that counts as "interaction" with the page, and so then the dialog still comes up. This shouldn't happen.
Priority: -- → P3
Component: DOM → DOM: Core & HTML
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Pushed by gijskruitbosch@gmail.com: https://hg.mozilla.org/integration/autoland/rev/c36eedede558 don't treat modified / shortcut-like key presses as user input, r=smaug
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Regressions: 1586220
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: