Bug 1345830 - don't treat modified / shortcut-like key presses as user input, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D47603

--HG--
extra : moz-landing-system : lando